--- a/templates/forms.html
+++ b/templates/forms.html
@@ -2,8 +2,8 @@
 {% block title  %}Forms{% endblock  %}
 {% block content  %}
     <form method="POST" action="/process">
-        <input type="text" name="name"/>
-        <input type="text" name="location"/>
+        <input type="text" id="name" name="name"/>
+        <input type="text"  id="location" name="location"/>
         <input type="submit" value="Enviar"/>
     </form>
 {% endblock  %}
